fix: pagination icons color in dark mode

--- a/assets/scss/dark-mode.scss
+++ b/assets/scss/dark-mode.scss
@@ -302,6 +302,19 @@ html.night {
     }
   }
 
+
+  .extra-container { 
+    .pagination {
+      .pagination-action {
+        &:hover {
+          * {
+            color: $deep-light-accent !important;
+          }
+        }
+      }
+    }
+  }
+
   // waline
   /* 常规颜色 */
   --waline-white: #000;
